invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_77.src
.IPPcode24
STRI2INT GF@e int bool@false